# Rover_2022_2023

./: README.md
software/: .gitignore  Dockerfile  Dockerfile.rover  rover-container.sh
software/firmware/modbus_master/: modbus_master.py  test.py
software/firmware/modbus_slave/: library.json  modbus.c  modbus.h
software/firmware/sam4s/: .gitignore  sam4s.atsln
software/firmware/sam4s_nodes/: sam4s_nodes.atsln
software/firmware/teensy/: .gitignore
software/ros_examples/ros2_examples/: package.xml  setup.cfg  setup.py
software/ros_examples/ros2_examples_interfaces/: CMakeLists.txt  package.xml
software/ros_packages/ground_station/: CMakeLists.txt  package.xml
software/ros_packages/ground_station/scripts/: ground_station_launch.sh  ground_station_single_screen_launch.sh
software/ros_packages/ground_station/src/: ground_station.py  tracking_algorithm.py
software/ros_packages/ground_station/src/Framework/ControlSystems/: DriveAndCameraControlSender.py  EffectorsAndArmControlSender.py
software/ros_packages/ground_station/src/Framework/MapSystems/: RoverMap.py  RoverMapCoordinator.py  signing.py
software/ros_packages/ground_station/src/Framework/MiscSystems/: BashConsoleCore.py  RDFCore.py  TrackingCallback.py  TrackingCoordinator.py  TrackingCore.py
software/ros_packages/ground_station/src/Framework/SettingsSystems/: UbiquitiRadioSettings.py
software/ros_packages/ground_station/src/Framework/StatusSystems/: StatusCore.py  UbiquitiStatusCore.py
software/ros_packages/ground_station/src/Framework/VideoSystems/: RoverVideoCoordinator.py  RoverVideoReceiver.py
software/ros_packages/ground_station/src/Resources/Ui/: left_screen.ui  single_screen.ui
software/ros_packages/rover2_arm/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_arm_interface/: CMakeLists.txt  package.xml
software/ros_packages/rover2_camera/: CMakeLists.txt  package.xml
software/ros_packages/rover2_camera/launch/: camera_launch.py
software/ros_packages/rover2_camera/src/: rover_camera.cpp
software/ros_packages/rover2_camera_interface/: CMakeLists.txt  package.xml
software/ros_packages/rover2_control/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_control_interface/: CMakeLists.txt  package.xml
software/ros_packages/rover2_main/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_odometry/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_status/: package.xml  setup.cfg  setup.py
software/ros_packages/rover2_status_interface/: CMakeLists.txt  package.xml
software/scripts/: equipment_servicing_interface.py
software/testing/: rdf_data_processing.py  ubiradio_testing.py  udp_debug.py
(+103 files in other folders)
