<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover2_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hakkilab@oregonstate.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rover2_camera_interface</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv2</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
